# SparseLPN

./: .gitignore  CMakeLists.txt  EncryptionScheme.cpp  EncryptionScheme.h  main.cpp  polynomial.cpp  polynomial.h  script.sh
include/: DenseMatrix.h  EncryptionScheme.h  LinearHE.h  Matrix.h  SparseMatrix.h  polynomial.h
src/: DenseMatrix.cpp  EncryptionScheme.cpp  LinearHE.cpp  Matrix.cpp  SparseMatrix.cpp  polynomial.cpp
tests/: test128bits.cpp  testEncScheme.cpp  testLHE.cpp  testOpenMP  testOpenMP.cpp  testSparseMatrix.cpp
